<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_appbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingRight="10dip"
                android:paddingTop="10dip">

                <!-- 用户名 -->
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_login_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="手机号码/性多多帐号"
                    android:inputType="textPhonetic"
                    android:textCursorDrawable="@drawable/txt_cursor_drawable"
                    android:textSize="@dimen/txt_size_16"
                    app:met_baseColor="#000000"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="用户名"
                    app:met_iconLeft="@mipmap/icon_login_user"
                    app:met_primaryColor="@color/xjk_title_text_color"
                    app:met_singleLineEllipsis="true" />
                <!-- 密码 -->

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_login_user_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="6~16位密码"
                    android:inputType="textPassword"
                    android:textColorHint="@color/color_black3"
                    android:textCursorDrawable="@drawable/txt_cursor_drawable"
                    android:textSize="@dimen/txt_size_16"
                    app:met_baseColor="#000000"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="密码"
                    app:met_iconLeft="@mipmap/icon_login_psw"
                    app:met_maxCharacters="16"
                    app:met_minCharacters="6"
                    app:met_primaryColor="@color/xjk_title_text_color"
                    app:met_singleLineEllipsis="true" />
                <!-- 找密，注册 -->


                <!-- 登录 -->
                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    app:mrl_rippleAlpha="0.3"
                    app:mrl_rippleColor="@color/xjk_title_text_color"
                    app:mrl_rippleDuration="300"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/btn_login_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/holo_blue"
                        android:text="@string/login"
                        android:textColor="@color/color_white" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

            <!-- 注册 -->

            <RelativeLayout
                android:id="@+id/llyt_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="-1dp"
                android:paddingTop="30dp">

                <LinearLayout
                    android:id="@+id/llyt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/half_border_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_register1"
                        android:textColor="@color/md_grey_600"
                        android:textSize="@dimen/txt_size_14" />

                    <TextView
                        android:id="@+id/tv_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_register2"
                        android:textColor="@color/xjk_title_text_color"
                        android:textSize="@dimen/txt_size_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llyt_forget_psw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/llyt_register"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/half_border_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_forget_psw1"
                        android:textColor="@color/md_grey_600"
                        android:textSize="@dimen/txt_size_14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_forget_psw2"
                        android:textColor="@color/xjk_title_text_color"
                        android:textSize="@dimen/txt_size_16" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tvLoading"
            android:padding="20dp"
            android:visibility="gone"
            android:background="@color/color_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="玩命加载中"
            android:gravity="center"/>
    </RelativeLayout>


</LinearLayout>